--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,14 @@ services:
     restart: always
     environment:
       MYSQL_USER: 'admin'
-      MYSQL_PASSWORD: 'admin123'
-      MYSQL_DATABASE: 'new_flask_crud'
-      MYSQL_ROOT_PASSWORD: 'admin123'
+      MYSQL_PASSWORD: 'admin'
+      MYSQL_DATABASE: 'dailydiet'
+      MYSQL_ROOT_PASSWORD: 'admin'
+      MYSQL_ROOT_HOST: 'localhost'
     ports:
       - "3306:3306"
     expose:
       # Opens port 3306 on the container
       - '3306'
     volumes:
-      - D:\mysql:/var/lib/mysql
+      - D:\mysql:/var/lib/dailydiet_db
